# ollama-think

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ai_docs.md  config.md  config.yaml  context7.json  model_capabilies.json  model_capabilies.md  model_capabilities.json  model_capabilities.md  model_capabilities_no_hacks.json  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt  sitemap.xml  why_hack.md
.github/workflows/: python-publish.yml
examples/: call_example.py  client_example.py  options_example.py  response_format_example.py  tool_calling_example.py
src/ollama_think/: __init__.py  client.py  config.py  config.yaml  hack_config.py  stream_parser.py  thinking_hacks.py  thinkresponse.py
src/ollama_think/playground/: cli.py
src/ollamapp/: __init__.py
test_output/hacks_disabled/: aliafshar_gemma3-it-qat-tools_12b.json  allenporter_xlam_7b.json  cogito_14b.json  deepcoder_latest.json  deepscaler_latest.json  deepseek-r1_1.5b.json  deepseek-r1_7b.json  deepseek-r1_8b.json  deepseek-r1_latest.json  devstral-small-2_24b.json  exaone-deep_latest.json  falcon3_10b.json  gemma3_latest.json  gpt-oss_120b-cloud.json  gpt-oss_20b.json  granite3.2-vision_latest.json  granite3.2_latest.json  granite3.3_2b.json  granite3.3_latest.json  granite4_micro-h.json  granite4_tiny-h.json  llama3.2_latest.json  ministral-3_3b.json  ministral-3_8b.json  mistral_latest.json  phi3.5_latest.json  phi4-mini-reasoning_latest.json  phi4-mini_latest.json  phi4-reasoning_plus.json  phi4_latest.json  qwen2.5-coder_14b.json  qwen2.5-coder_latest.json  qwen2.5vl_7b.json  qwen3-coder_latest.json  qwen3_0.6b.json  qwen3_1.7b.json  qwen3_14b.json  qwen3_30b.json  qwen3_4b.json  rnj-1_latest.json  (+2 more)
test_output/hacks_enabled/: codeqwen_7b-chat.json  cogito_14b.json  deepcoder_latest.json  deepscaler_latest.json  deepseek-coder-v2_16b.json  deepseek-r1_1.5b.json  deepseek-r1_14.json  deepseek-r1_14b.json  deepseek-r1_7b.json  deepseek-r1_8b.json  devstral_latest.json  dolphin-llama3_8b.json  ebdm_gemma3-enhanced_12b.json  gemma2_latest.json  gemma3_12b.json  gemma3n_latest.json  gpt-oss_latest.json  granite3.1-dense_8b.json  granite3.2-vision_latest.json  granite3.2_latest.json  granite3.3_2b.json  granite3.3_latest.json  llama3.1_latest.json  llama3.2-vision_latest.json  marco-o1_latest.json  minicpm-v_latest.json  ministral-3_14b.json  nemotron-mini_4b.json  phi3_14b.json  phi4-mini-reasoning_latest.json  phi4-mini_latest.json  phi4-reasoning_plus.json  qwen2.5-coder_1.5b.json  qwen2.5-coder_14b.json  qwen2.5-coder_7b-base.json  qwen3_0.6b.json  qwen3_1.7b.json  qwen3_14b.json  qwen3_30b.json  qwen3_4b.json  (+4 more)
tests/: conftest.py  generate_model_capabilities_report.py  test_async_client.py  test_client.py  test_config.py  test_hacks.py  test_model_capabilities.py  test_stream_parser.py  test_thinking_options.py  test_thinkresponse.py
