[project]
name = "ollama-think"
version = "0.1.4"
description = "A light wrapper around ollama-python that introduces caching, syntax sugar and increased `think` compatibility"
readme = "README.md"
authors = [
    { name = "Chris Kilner", email = "chris@rhiza.fr" }
]
keywords = ["ollama", "LLM", "think", "AI", "compatibility", "cogito", "granite", "phi4-reasoning", "phi4-mini-reasoning"]
requires-python = ">=3.9"
dependencies = [
    "diskcache>=5.6.3",
    "ollama>=0.5.1",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/rhiza-fr/ollama-think"
"Bug Tracker" = "https://github.com/rhiza-fr/ollama-think/issues"

[project.scripts]
ollama-think = "ollama_think.playground.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
    "hatch",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (select with '-m \"slow\"')"
]
addopts = "-m 'not slow'"

[tool.hatch.envs.test]
dependencies = [
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "pytest-mock>=3.14.1"
]
[tool.hatch.envs.test.scripts]
run = "pytest --cov=src/ollama_think --cov-report=html:test_output/htmlcov {args}"

[tool.ruff]
line-length = 100
