[project]
name = "ollama-think"
version = "0.1.8"
description = "A light wrapper around ollama-python that introduces caching, syntax sugar and increased `think` compatibility"
readme = "README.md"
authors = [
    { name = "Chris Kilner", email = "chris@rhiza.fr" }
]
keywords = ["ollama", "LLM", "think", "AI", "compatibility", "cogito", "granite", "phi4-reasoning", "phi4-mini-reasoning"]
requires-python = ">=3.9"
dependencies = [
    "diskcache>=5.6",
    "ollama>=0.5.3",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/rhiza-fr/ollama-think"
"Bug Tracker" = "https://github.com/rhiza-fr/ollama-think/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (select with '-m \"slow\"')",
    "asyncio: marks tests as asyncio tests (select with '-m \"asyncio\"')"
]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100



